[tool.poetry]
name = "discordcryptocurrencybot"
version = "0.1.0"
description = ""
authors = ["NamHoai3 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pypresence = "^4.2.1"
Flask = "^2.0.2"
discord = "^1.7.3"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
